# qkb

./: LICENSE  README.md  pyproject.toml
examples/: config.yaml  notes.md  service.json  users.csv
src/qkb/: __init__.py  cli.py  config.py  db.py  models.py
src/qkb/ingest/: __init__.py  chunker.py  pipeline.py  readers.py  summarizer.py
src/qkb/llm/: __init__.py  client.py
src/qkb/search/: __init__.py  bm25.py  reranker.py
