[project]
name = "qkb"
version = "0.0.1"
description = "CLI tool for managing and querying internal knowledge files via SQLite FTS5 + optional LLM rerank."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "MA SHI QIAN", email = "ccuulinay@gmail.com" }]
keywords = ["cli", "knowledge-base", "search", "fts5", "sqlite", "llm", "rag", "bm25"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Text Processing :: Indexing",
]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "httpx>=0.27",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/ccuulinay/qkb"
Repository = "https://github.com/ccuulinay/qkb"
Issues = "https://github.com/ccuulinay/qkb/issues"

[project.scripts]
qkb = "qkb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qkb"]

[tool.hatch.build.targets.sdist]
include = [
  "src/qkb",
  "tests",
  "examples",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
